<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTextInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/passwordTextInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:onClick="onLogin"
                android:text="@string/button_login"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonGoToForgotPassword"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:onClick="goToForgotPassword"
                android:text="@string/button_goToForgotPassword"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSignup"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@+id/buttonGoToForgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:onClick="goToSignup"
                android:text="@string/button_goToSignup"
                android:textSize="16sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/loginProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/transparent_grey"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ProgressBar>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>